test/log/conversion/vextend_v_i32_m.txt
vextend_v_i32_m.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vextend_v_i32_m.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vextend_v_i32_m.c:31:6: warning: no previous prototype for 'vextend_v_i32_m_golden' [-Wmissing-prototypes]
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vextend_v_i32_m.c: In function 'vextend_v_i32_m_golden':
vextend_v_i32_m.c:32:1: error: unknown type name 'Operator'
   32 | Operator Line --- TODO
      | ^~~~~~~~
vextend_v_i32_m.c:32:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   32 | Operator Line --- TODO
      |               ^~
vextend_v_i32_m.c:36:5: warning: 'main' is normally a non-static function [-Wmain]
   36 | int main(void) {
      |     ^~~~
vextend_v_i32_m.c: In function 'main':
vextend_v_i32_m.c:38:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   38 |     bool16_t mask;
      |              ^~~~
vextend_v_i32_m.c:31:39: note: shadowed declaration is here
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                             ~~~~~~~~~~^~~~
vextend_v_i32_m.c:39:17: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   39 |     int64x8x2_t maskoff;
      |                 ^~~~~~~
vextend_v_i32_m.c:31:52: note: shadowed declaration is here
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                            ~~~~~~~~^~~~~~~~~~~~~
vextend_v_i32_m.c:40:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   40 |     int32x16_t a;
      |                ^
vextend_v_i32_m.c:31:75: note: shadowed declaration is here
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                                                  ~~~~~~~~~^
vextend_v_i32_m.c:46:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   46 |     int64_t exp_result[2][8] = {0};
      |             ^~~~~~~~~~
vextend_v_i32_m.c:31:85: note: shadowed declaration is here
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                                                             ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vextend_v_i32_m.c:48:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   48 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vextend_v_i32_m.c:53:55: warning: passing argument 4 of 'vextend_v_i32_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   53 |     vextend_v_i32_m_golden(exp_mask,exp_maskoff,exp_a,exp_result);
      |                                                       ^~~~~~~~~~
      |                                                       |
      |                                                       int64_t (*)[8] {aka long long int (*)[8]}
vextend_v_i32_m.c:31:85: note: expected 'int64_t (*)[16]' {aka 'long long int (*)[16]'} but argument is of type 'int64_t (*)[8]' {aka 'long long int (*)[8]'}
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                                                             ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vextend_v_i32_m.c:56:14: warning: implicit declaration of function 'vextend_v_i32_m'; did you mean 'vext_v_i32_m'? [-Wimplicit-function-declaration]
   56 |     result = vextend_v_i32_m(mask,maskoff,a);
      |              ^~~~~~~~~~~~~~~
      |              vext_v_i32_m
vextend_v_i32_m.c:56:14: error: incompatible types when assigning to type 'int64x8x2_t' from type 'int'
vextend_v_i32_m.c:60:35: error: subscripted value is neither array nor pointer nor vector
   60 |         if(exp_result[i] != result[i]) {
      |                                   ^
vextend_v_i32_m.c:61:79: error: subscripted value is neither array nor pointer nor vector
   61 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vextend_v_i32_m.c:45:17: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   45 |     int64x8x2_t result = {0};
      |                 ^~~~~~
vextend_v_i32_m.c: In function 'vextend_v_i32_m_golden':
vextend_v_i32_m.c:76:1: error: expected declaration or statement at end of input
   76 | }
      | ^
vextend_v_i32_m.c:31:39: warning: unused parameter 'mask' [-Wunused-parameter]
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                             ~~~~~~~~~~^~~~
vextend_v_i32_m.c:31:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                            ~~~~~~~~^~~~~~~~~~~~~
vextend_v_i32_m.c:31:75: warning: unused parameter 'a' [-Wunused-parameter]
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                                                  ~~~~~~~~~^
vextend_v_i32_m.c:31:85: warning: unused parameter 'exp_result' [-Wunused-parameter]
   31 | void vextend_v_i32_m_golden(uint64_t *mask,int64_t maskoff[2][8],int32_t *a,int64_t exp_result[][ELE_NUM]) {
      |                                                                             ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
At top level:
vextend_v_i32_m.c:36:5: warning: 'main' defined but not used [-Wunused-function]
   36 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vextend_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vextend_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vextend_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed